Fix vertical scrollbar

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -66,6 +66,9 @@ button:disabled {
   max-width: 100px;
   white-space: nowrap;
 }
+.category-scrollbar {
+  overflow-y: hidden;
+}
 
 .input-group > .input-group-append > .btn {
   border-radius: 0 0.25rem 0.25rem 0;
